fix: sidebar item should wrap with fullcalendar's Draggable, and toggle sidebar shouldn't cause full render
fixes #77 #68

--- a/src/tiddlywiki-calendar/tiddlywiki-ui/PageLayout/CalendarLayout.css
+++ b/src/tiddlywiki-calendar/tiddlywiki-ui/PageLayout/CalendarLayout.css
@@ -69,7 +69,3 @@ div.tc-page-container.tw-calendar-layout-container {
   flex-direction: column;
   margin: 0;
 }
-
-.tc-page-controls svg.tc-image-tmd-calendar-cursor {
-  fill: <<colour toolbar-options-button>>;
-}
